command line css

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 		<img src="./images/logo.png" alt="grocery E list">
 	</div>
 	<div class="command row">
-		<div class="input medium-5 columns"></div>
+		<div class="input  large-offset-2 medium-5 columns"></div>
 		<div class="add medium-5 columns end">
 			<p>+</p>
 		</div>
-		<div class="reset medium-2 columns end transparent-75">
+		<div class="reset medium-offset-1 medium-2 columns end transparent-75">
 			<p>reset</p>
 		</div>
 	</div>
