--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 			<p>reset</p>
 		</div>
 	</div>
-	<div class="list">
+	<div class="list row">
 		<div class="list-normal"></div>
+			<h1>Bananas</h1>
 		<div class="list-marked"></div>
 		<div class="list-hover-marked"></div>
 		<div class="list-hover-add"></div> 
