--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<img src="./images/logo.png" alt="grocery E list">
 	</div>
 	<div class="command row">
-		<div class="input  large-offset-2 medium-5 columns"></div>
+		<div class="input  medium-offset-2 medium-5 columns"></div>
 		<div class="add medium-5 columns end">
 			<p>+</p>
 		</div>
@@ -22,12 +22,14 @@
 			<p>reset</p>
 		</div>
 	</div>
-	<div class="list row">
-		<div class="list-normal"></div>
-			<h1>Bananas</h1>
-		<div class="list-marked"></div>
-		<div class="list-hover-marked"></div>
-		<div class="list-hover-add"></div> 
-	</div>
+	<div>
+		<ul class="row item">
+			<li class="large-8 large-centered column">
+				<button class="check small-1">☑</button>
+				<span class="list small-6 medium-centered columns">""</span>
+				<button class="small-1 small-end columns delete">×</button>
+			</li>
+		</ul>
+	</div>	
 </body>
 </html>
