--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 		<div class="add medium-5 columns end">
 			<p>+</p>
 		</div>
-		<div class="reset medium-offset-1 medium-2 columns end transparent-75">
+		<div class="reset medium-offset-1 medium-2 columns end">
 			<p>reset</p>
 		</div>
 	</div>
 	<div>
-		<ul class="row item">
-			<li class="large-8 large-centered column">
-				<button class="check small-1">☑</button>
-				<span class="list small-6 medium-centered columns">""</span>
-				<button class="small-1 small-end columns delete">×</button>
+		<ul>
+			<li class="row item">
+				<button class="check small-1 columns">☑</button>	
+				<span class="list small-6 small-centered columns">""</span>
+				<button class="delete small-1 columns">×</button>
 			</li>
 		</ul>
 	</div>	
