--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<div class="logo transparent-75">
 		<img src="./images/logo.png" alt="grocery E list">
 	</div>
-	<div class="command row">
-		<div class="input  medium-offset-2 medium-5 columns"></div>
+	<div class="command row small-centered columns">
+		<div class="input  medium-offset-2 small-5 columns"></div>
 		<div class="add medium-5 columns end">
 			<p>+</p>
 		</div>
@@ -24,9 +24,9 @@
 	</div>
 	<div>
 		<ul>
-			<li class="row item">
+			<li class="row medium-6 small-12 small-centered columns item">
 				<button class="check small-1 columns">☑</button>	
-				<span class="list small-6 small-centered columns">""</span>
+				<span class="list small-centered columns">""</span>
 				<button class="delete small-1 columns">×</button>
 			</li>
 		</ul>
