--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<ul>
 			<li class="row medium-6 small-12 small-centered columns item">
 				<button class="check small-1 columns">☑</button>	
-				<span class="list small-centered columns">""</span>
+				<span class="list small-centered columns">Apples</span>
 				<button class="delete small-1 columns">×</button>
 			</li>
 		</ul>
