list hide, input

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 		<img src="./images/logo.png" alt="grocery E list">
 	</div>
 	<div class="command row small-centered columns">
-		<div class="input  medium-offset-2 small-9 medium-5 columns"></div>
+		<div class="medium-offset-2 small-9 medium-5 columns">
+			<input id="input" type="text" autocomplete="off" placeholder="apples ...maybe?">
+		</div>
 		<div class="add medium-5 columns end">
 			<button class="add-b">+</button>
 		</div>
@@ -37,4 +39,5 @@
 		</ul>
 	</div>	
 </body>
+<script type="text-javascript" src="js/function.js"></script>
 </html>
