--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<link rel="stylesheet" type="text/css" href='css/base.css'></link>
 	<link rel="stylesheet" type="text/css" href='css/layout.css'></link>
  	<script src="http://code.jquery.com/jquery.min.js"></script>
-  	<script src="js/app.js"></script>
 </head>
 <body class="billboard">
 	<div class="logo transparent-75">
@@ -39,5 +38,5 @@
 		</ul>
 	</div>	
 </body>
-<script type="text-javascript" src="js/function.js"></script>
+<script type="text-javascript" src="./js/main.js"></script>
 </html>
