--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<button class="delete small-1 columns">×</button>
 			</li>
 		</ul>
-	</div>	
+	</div>
+	<script type="text/javascript" src="./js/main.js"></script>	
 </body>
-<script type="text-javascript" src="./js/main.js"></script>
 </html>
