--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 		<ul>
 			<li class="row medium-6 small-12 small-centered columns item">
 				<button class="check small-1 columns">☑</button>	
-				<span class="small-centered columns">Apples</span>
+				<span class="small-centered columns fruit"></span>
 				<button class="delete small-1 columns">×</button>
 			</li>
 			<li class="row medium-6 small-12 small-centered columns item-marked">
 				<button class="uncheck small-1 columns">+</button>	
-				<span class="small-centered columns">Apples</span>
+				<span class="small-centered columns"></span>
 				<button class="delete small-1 columns">×</button>
 			</li>
 		</ul>
