--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</div>
 	</div>
 	<div class="list">
-		<ul>
+		<ul id="test">
 			<li class="row medium-6 small-12 small-centered columns item">
 				<button class="check small-1 columns">☑</button>	
 				<span class="small-centered columns fruit"></span>
