reset button working

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<ul id="test">
 			<li class="row medium-6 small-12 small-centered columns item">
 				<button class="check small-1 columns">☑</button>	
-				<span class="small-centered columns fruit"></span>
+				<span class="small-centered columns"></span>
 				<button class="delete small-1 columns">×</button>
 			</li>
 			<li class="row medium-6 small-12 small-centered columns item-marked">
